--- a/cuts/package.json
+++ b/cuts/package.json
@@ -12,7 +12,9 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.27",
     "nodemon": "^2.0.4",
+    "radium": "^0.26.0",
     "react": "^16.13.1",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
